# legendary-super-ultra-black-dragon

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SESSION_LOG.md  SUPPORT.md  alembic.ini  pyproject.toml  setup.py
dure/: CHANGELOG.md  README.md  pyproject.toml  setup.py
dure/debian/: changelog  dure.install  dure.postinst  rules
dure/docs/: README.md  activation.md  admin-operational-validation-2026-07-22.md  adr-vllm-multinode-rank-binding.md  apt-distribution.md  architecture.md  artifact-cache-operations.md  artifact-distribution.md  benchmarking.md  cli-reference.md  configuration-reference.md  controller-operations.md  data-privacy.md  demo-report.md  deployment-operations.md  development.md  dure-proposal.md  external-inference-boundary.md  fleet-scheduler.md  glossary.md  legacy-upgrades.md  model-selection.md  networking.md  operations-reference.md  operations.md  profile-qualification.md  release-governance.md  release-runbook.md  release-validation.md  roadmap.md  security.md  slo-benchmark-policy.md  stage-artifacts.md  support-matrix.md
dure/packaging/: dure-benchmark  install.sh.in
dure/scripts/: acceptance-vllm-stage-builder.py  acceptance-vllm-stage-ray-pp.py  build-apt-repo.sh  build-deb.sh  check_docs.py  release_provenance.py  render-installer.sh  test-apt-repo.sh
dure/tests/: helpers.py  test_activation.py  test_agent.py  test_agent_preparation.py  test_artifact_cache_lifecycle.py  test_artifact_chunk_origin_api.py  test_artifact_distribution_e2e.py  test_artifact_download.py  (+42 more)
(+185 files in other folders)
