[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dure"
version = "0.4.7"
description = "Resource-aware community LLM node bootstrapper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Dure contributors"}]
dependencies = []

[project.optional-dependencies]
server = [
  "alembic>=1.13,<2",
  "fastapi>=0.110,<1",
  "psycopg[binary]>=3.1,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.29,<1",
]
test = [
  "alembic>=1.13,<2",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.1,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.29,<1",
]

[project.scripts]
dure = "dure.cli:main"
dure-agent = "dure.agent:main"
dure-server = "dure.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
